added WAVE_JVM_OPTS
Signed-off-by: munishchouhan <hrma017@gmail.com>